--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "express": "~3.1.0",
         "path": "~0.4.9",
-        "mongoose": "~3.5.5"
+        "mongoose": "~3.5.5",
+        "winston": "~0.7.1"
     }
 }
