--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "express": "~3.1.0",
         "path": "~0.4.9",
         "mongoose": "~3.5.5",
-        "winston": "~0.7.1"
+        "winston": "~0.7.1",
+        "socket.io": "~0.9.16"
     }
 }
